deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nginx-from-github
  labels:
    app: nginx-from-github
    app.kubernetes.io/part-of: nginx-from-github
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-from-github
  template:
    metadata:
      labels:
        app: nginx-from-github
        deployment: nginx-from-github
    spec:
      containers:
        - name: nginx-from-github
          image: ghcr.io/schwanenseee/auftrag-6-2:v1
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
