route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nginx-for-6-2
  labels:
    app: nginx-for-6-2
    app.kubernetes.io/component: nginx-for-6-2
    app.kubernetes.io/part-of: nginx-for-6-2
spec:
  to:
    kind: Service
    name: nginx-for-6-2
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
selector:
  app: nginx-for-6-2
  deployment: nginx-for-6-2
